objects/Order__x.object
<CustomObject>
    <fields>
        <fullName>BDOM__c</fullName>
        <externalDeveloperName>BDOM</externalDeveloperName>
        <label>BDOM</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BILLING_ADDRESS__c</fullName>
        <externalDeveloperName>BILLING_ADDRESS</externalDeveloperName>
        <label>Billing Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BILL_PROFILE_NAME__c</fullName>
        <description>BILL_PROFILE_NAME</description>
        <externalDeveloperName>BILL_PROFILE_NAME</externalDeveloperName>
        <label>Billing Profile</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BILL_PROFILE_ROW_ID__c</fullName>
        <description>Billing profile row id</description>
        <externalDeveloperName>BILL_PROFILE_ROW_ID</externalDeveloperName>
        <label>Billing Profile Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BP_BANK_ACCOUNT_NAME__c</fullName>
        <externalDeveloperName>BP_BANK_ACCOUNT_NAME</externalDeveloperName>
        <label>Account Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BP_BANK_ACCOUNT_NUMBER__c</fullName>
        <externalDeveloperName>BP_BANK_ACCOUNT_NUMBER</externalDeveloperName>
        <label>Account Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BP_BANK_ACCOUNT_TYPE__c</fullName>
        <externalDeveloperName>BP_BANK_ACCOUNT_TYPE</externalDeveloperName>
        <label>Account Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BP_BANK_ROUTING_NUMBER__c</fullName>
        <externalDeveloperName>BP_BANK_ROUTING_NUMBER</externalDeveloperName>
        <label>Routing Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BP_EXPIRATION_DATE__c</fullName>
        <externalDeveloperName>BP_EXPIRATION_DATE</externalDeveloperName>
        <label>Expiration Date</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BP_PAYMENT_METHOD__c</fullName>
        <externalDeveloperName>BP_PAYMENT_METHOD</externalDeveloperName>
        <label>Payment Method</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Account_CAN__c</fullName>
        <description>Link to Billing Account Name by CAN (ORD_BILL_ACCOUNT_CAN)</description>
        <externalDeveloperName>ORD_BILL_ACCOUNT_CAN</externalDeveloperName>
        <label>Billing Account CAN</label>
        <length>100</length>
        <referenceTargetField>Account.CAN__c</referenceTargetField>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orders (Billing)</relationshipLabel>
        <relationshipName>OrdersBillingAcct</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>Billing_Profile_Contact_CACI__c</fullName>
        <description>Billing profile contact CACI in Siebel.</description>
        <externalDeveloperName>BP_CONTACT_CACI</externalDeveloperName>
        <label>Billing Profile Contact CACI</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Profile_Contact_First_Name__c</fullName>
        <description>Billing profile contact first name</description>
        <externalDeveloperName>BP_CON_FIRST_NAME</externalDeveloperName>
        <label>Billing Profile Contact First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Profile_Contact_Id__c</fullName>
        <description>Billing profile contact&apos;s salesforce record id.</description>
        <externalDeveloperName>BP_CON_SFDC_ID</externalDeveloperName>
        <label>Billing Profile Contact Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Profile_Contact_Last_Name__c</fullName>
        <description>Billing profile contact&apos;s last name</description>
        <externalDeveloperName>BP_CON_LAST_NAME</externalDeveloperName>
        <label>Billing Profile Contact Last Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Profile_Contact_Name__c</fullName>
        <description>Concatenated first name + last name of billing profile contact.</description>
        <externalDeveloperName>BP_CONTACT_NAME</externalDeveloperName>
        <label>Billing Profile Contact Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Profile_Contact_Row_Id__c</fullName>
        <description>Billing profile contact&apos;s siebel row id.</description>
        <externalDeveloperName>BP_CON_SIEBEL_ID</externalDeveloperName>
        <label>Billing Profile Contact Row Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Profile_Last_Updated__c</fullName>
        <description>Last updated date of the billing profile.  A date/time value.</description>
        <externalDeveloperName>BP_LAST_UPD</externalDeveloperName>
        <label>Billing Profile Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Billing_Profile_Status__c</fullName>
        <externalDeveloperName>BP_STATUS</externalDeveloperName>
        <label>Billing Profile Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Profile__c</fullName>
        <externalDeveloperName>BILL_PROFILE_ROW_ID</externalDeveloperName>
        <label>Billing Profile Id</label>
        <length>100</length>
        <referenceTo>V_ODATA_BILLING_PROFILES__x</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>CC_EXPIRATION_MONTH__c</fullName>
        <externalDeveloperName>CC_EXPIRATION_MONTH</externalDeveloperName>
        <label>Expiration Month</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_EXPIRATION_YEAR__c</fullName>
        <externalDeveloperName>CC_EXPIRATION_YEAR</externalDeveloperName>
        <label>Expiration Year</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CREATED_BY__c</fullName>
        <description>Sales Agent</description>
        <externalDeveloperName>CREATED_BY</externalDeveloperName>
        <label>Sales Agent</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CREATED__c</fullName>
        <description>CREATED</description>
        <externalDeveloperName>CREATED</externalDeveloperName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CREDIT_CARD_TYPE__c</fullName>
        <description>Method = credit card type + last 4 digit of card #</description>
        <externalDeveloperName>CREDIT_CARD_TYPE</externalDeveloperName>
        <label>Method</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAST_UPDATED_BY__c</fullName>
        <description>LAST_UPDATED_BY</description>
        <externalDeveloperName>LAST_UPDATED_BY</externalDeveloperName>
        <label>Last Updated By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAST_UPD__c</fullName>
        <description>LAST_UPD</description>
        <externalDeveloperName>LAST_UPD</externalDeveloperName>
        <label>Last Updated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>License_Number__c</fullName>
        <description>License Number from Siebel order line item extension table ATTRIB_04</description>
        <externalDeveloperName>LICENSE_NUMBER</externalDeveloperName>
        <label>License Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAME_ON_CREDIT_CARD__c</fullName>
        <description>Name on Credit Card</description>
        <externalDeveloperName>NAME_ON_CREDIT_CARD</externalDeveloperName>
        <label>Name on Credit Card</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORDER_CONTACT_AUTHID__c</fullName>
        <description>Online Auth ID</description>
        <externalDeveloperName>ORDER_CONTACT_AUTHID</externalDeveloperName>
        <label>Online Auth ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORDER_CONTACT_EMAIL__c</fullName>
        <description>Email</description>
        <externalDeveloperName>ORDER_CONTACT_EMAIL</externalDeveloperName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ORDER_CONTACT_FIRST_NAME__c</fullName>
        <externalDeveloperName>ORDER_CONTACT_FIRST_NAME</externalDeveloperName>
        <label>Contact First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORDER_CONTACT_LAST_NAME__c</fullName>
        <description>Contact: last name only for now.</description>
        <externalDeveloperName>ORDER_CONTACT_LAST_NAME</externalDeveloperName>
        <label>Contact Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORDER_CONTACT_NAME__c</fullName>
        <externalDeveloperName>ORDER_CONTACT_NAME</externalDeveloperName>
        <label>Contact</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORDER_DATE__c</fullName>
        <description>Order Date</description>
        <externalDeveloperName>ORDER_DATE</externalDeveloperName>
        <label>Order Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ORDER_METHOD__c</fullName>
        <externalDeveloperName>ORDER_METHOD</externalDeveloperName>
        <label>Order Method</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORDER_NUMBER__c</fullName>
        <description>ORDER_NUMBER</description>
        <externalDeveloperName>ORDER_NUMBER</externalDeveloperName>
        <label>Order Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORDER_STATUS__c</fullName>
        <description>Order Status</description>
        <externalDeveloperName>ORDER_STATUS</externalDeveloperName>
        <label>Order Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORDER_TAX_EXEMPT_FLAG__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tax Exempt flag: y or n</description>
        <externalDeveloperName>ORDER_TAX_EXEMPT_FLAG</externalDeveloperName>
        <label>Tax Exempt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ORDER_TYPE__c</fullName>
        <description>ORDER_TYPE</description>
        <externalDeveloperName>ORDER_TYPE</externalDeveloperName>
        <label>Order Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORD_BILL_ACCOUNT_CAN__c</fullName>
        <description>ORD_BILL_ACCOUNT_CAN</description>
        <externalDeveloperName>ORD_BILL_ACCOUNT_CAN</externalDeveloperName>
        <label>Billing Account CAN</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORD_BILL_ACCOUNT_ID__c</fullName>
        <description>ORD_BILL_ACCOUNT_ID</description>
        <externalDeveloperName>ORD_BILL_ACCOUNT_ID</externalDeveloperName>
        <label>ORD_BILL_ACCOUNT_ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORD_BILL_ACCOUNT_NAME__c</fullName>
        <description>ORD_BILL_ACCOUNT_NAME</description>
        <externalDeveloperName>ORD_BILL_ACCOUNT_NAME</externalDeveloperName>
        <label>Billing Account</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORD_BILL_ACCOUNT_REALM_ID__c</fullName>
        <externalDeveloperName>ORD_BILL_ACCOUNT_REALM_ID</externalDeveloperName>
        <label>Billing Account Realm Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORD_PRI_ACCOUNT_ID__c</fullName>
        <description>ORD_PRI_ACCOUNT_ID</description>
        <externalDeveloperName>ORD_PRI_ACCOUNT_ID</externalDeveloperName>
        <label>ORD_PRI_ACCOUNT_ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORD_PRI_ACCOUNT_NAME__c</fullName>
        <externalDeveloperName>ORD_PRI_ACCOUNT_NAME</externalDeveloperName>
        <label>Account</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORD_PRI_ACCOUNT_REALM_ID__c</fullName>
        <externalDeveloperName>ORD_PRI_ACCOUNT_REALM_ID</externalDeveloperName>
        <label>Account Realm Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORD_PRI_ACCOUNT_SFDCID__c</fullName>
        <description>ORD_PRI_ACCOUNT_SFDCID</description>
        <externalDeveloperName>ORD_PRI_ACCOUNT_SFDCID</externalDeveloperName>
        <label>ORD_PRI_ACCOUNT_SFDCID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORD_SERV_ACCOUNT_CAN__c</fullName>
        <description>ORD_SERV_ACCOUNT_CAN</description>
        <externalDeveloperName>ORD_SERV_ACCOUNT_CAN</externalDeveloperName>
        <label>Service Account CAN</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORD_SERV_ACCOUNT_ID__c</fullName>
        <description>ORD_SERV_ACCOUNT_ID</description>
        <externalDeveloperName>ORD_SERV_ACCOUNT_ID</externalDeveloperName>
        <label>ORD_SERV_ACCOUNT_ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORD_SERV_ACCOUNT_NAME__c</fullName>
        <description>ORD_SERV_ACCOUNT_NAME</description>
        <externalDeveloperName>ORD_SERV_ACCOUNT_NAME</externalDeveloperName>
        <label>Service Account</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORD_SERV_ACCOUNT_REALM_ID__c</fullName>
        <externalDeveloperName>ORD_SERV_ACCOUNT_REALM_ID</externalDeveloperName>
        <label>Service Account Realm Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORD_SHIPPING_ACCOUNT_NAME__c</fullName>
        <externalDeveloperName>ORD_SHIPPING_ACCOUNT_NAME</externalDeveloperName>
        <label>Shipping Account</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <externalDeveloperName>QUOTE_SFDC_OPTY_ID</externalDeveloperName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Contact_CACI__c</fullName>
        <externalDeveloperName>ORDER_CONTACT_CACI</externalDeveloperName>
        <label>Order Contact CACI</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Primary_Account__c</fullName>
        <description>Field to relate standard Account object to external Order object.</description>
        <externalDeveloperName>ORD_PRI_ACCOUNT_CAN</externalDeveloperName>
        <label>Account CAN</label>
        <length>100</length>
        <referenceTargetField>Account.CAN__c</referenceTargetField>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>PAYMENT_TERM__c</fullName>
        <externalDeveloperName>PAYMENT_TERM</externalDeveloperName>
        <label>Payment Term</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QUOTE_COMMENTS__c</fullName>
        <description>Quote Comment</description>
        <externalDeveloperName>QUOTE_COMMENTS</externalDeveloperName>
        <label>Quote Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QUOTE_NAME__c</fullName>
        <description>Quote Name</description>
        <externalDeveloperName>QUOTE_NAME</externalDeveloperName>
        <label>Quote Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QUOTE_NUMBER__c</fullName>
        <description>Quote Number</description>
        <externalDeveloperName>QUOTE_NUMBER</externalDeveloperName>
        <label>Quote Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QUOTE_SFDC_OPTY_ID__c</fullName>
        <externalDeveloperName>QUOTE_SFDC_OPTY_ID</externalDeveloperName>
        <label>Opportunity ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <externalDeveloperName>QUOTE_NUMBER</externalDeveloperName>
        <label>Quote</label>
        <length>32</length>
        <referenceTargetField>Quote.Siebel_ROW_ID__c</referenceTargetField>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>RETURN_REASON__c</fullName>
        <description>Return Reason</description>
        <externalDeveloperName>RETURN_REASON</externalDeveloperName>
        <label>Return Reason</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROW_ID__c</fullName>
        <description>ROW_ID</description>
        <externalDeveloperName>ROW_ID</externalDeveloperName>
        <label>ROW_ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Account_CAN__c</fullName>
        <externalDeveloperName>ORD_SERV_ACCOUNT_CAN</externalDeveloperName>
        <label>Service Account CAN</label>
        <length>30</length>
        <referenceTargetField>Account.CAN__c</referenceTargetField>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orders (Shipping)</relationshipLabel>
        <relationshipName>OrdersServiceAcct</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>Shipping_Account_CAN__c</fullName>
        <externalDeveloperName>ORD_SHIPPING_ACCOUNT_CAN</externalDeveloperName>
        <label>Shipping Account CAN</label>
        <length>30</length>
        <referenceTargetField>Account.CAN__c</referenceTargetField>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>OrdersShippingAcct</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>TOTAL_AMOUNT__c</fullName>
        <externalDeveloperName>TOTAL_AMOUNT</externalDeveloperName>
        <label>Total</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TOTAL_EXT_CURRENT_CHARGE__c</fullName>
        <externalDeveloperName>TOTAL_EXT_CURRENT_CHARGE</externalDeveloperName>
        <label>Subtotal</label>
        <length>34</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TOTAL_EXT_NET_SHIPPING_CHARGE__c</fullName>
        <externalDeveloperName>TOTAL_EXT_NET_SHIPPING_CHARGE</externalDeveloperName>
        <label>Shipping</label>
        <length>34</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TOTAL_EXT_TAX_AMOUNT__c</fullName>
        <externalDeveloperName>TOTAL_EXT_TAX_AMOUNT</externalDeveloperName>
        <label>Tax</label>
        <length>34</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tokenized_CC_Number__c</fullName>
        <description>This field stores tokenized credit card number.</description>
        <externalDeveloperName>BP_TOKENIZED_CC_NUMBER</externalDeveloperName>
        <label>Tokenized CC Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Orders_List_View</fullName>
        <columns>ORDER_NUMBER__c</columns>
        <columns>ORDER_STATUS__c</columns>
        <columns>ORDER_TYPE__c</columns>
        <columns>ORD_BILL_ACCOUNT_NAME__c</columns>
        <columns>ORD_SERV_ACCOUNT_NAME__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Orders List View</label>
    </listViews>
</CustomObject>